# KAIST-Mobility-Challenge

./: .gitignore  1  1_1_demo.py  2  3_cross.py  4_way_intersection_3  README.md  converted_path1_2.json  demo3.py  demof.py  lane_change.json  my_driver1_1.py  my_driver1_2_collision.py  not_lane_change.json  path1_1.json  path1_2.json  path3_1.csv  path3_1_zone.csv  path3_2.csv  path3_2_out_zone.csv  path3_2ndcar.json  path3_3.csv  path3_4.csv  path3_4_zone.csv  path3_4thcar.json  path_1_1.json  path_2_1.json  path_hv_3_2.csv  profile1.json   profile2.json   profile3.json   profile4.json   projection2_1.py  rotary_1_2.csv  round.py  round_gate_logic_v5_decel_ramp.py  round_t.py  round_testbed(1).py  round_testbed.py  round_얫날.py  (+17 more)
path/: path3_1.csv  path3_1_out_zone.csv  path3_1_zone.csv  path3_2_out_zone.csv  path3_2_zone.csv  path3_3_zone.csv  path3_4_zone.csv  path_hv.csv  path_hv_2_1(new).csv  path_hv_2_1.csv  path_hv_2_2.csv  path_hv_3_1(new).csv  path_hv_3_1.csv  path_hv_3_2.csv
pkg_task_1_1/: CMakeLists.txt  package.xml
pkg_task_1_2/: CMakeLists.txt  package.xml
pkg_task_1_2/launch/: competition.launch.py
pkg_task_2/: CMakeLists.txt  package.xml
pkg_task_2/launch/: competition.launch.py
pkg_task_2/src/: task2.py
pkg_task_3/: CMakeLists.txt  package.xml
pkg_task_3/launch/: competition.launch.py
pkg_task_3/src/: task3.py
task1-1/: 1_1.py  task1_1.py
task1-2/: 1_2.py  path1_1.json  path1_2.json  right_1_2.csv  task1_2.py  upper_dz_v2.csv
task1_2/: 1_2.py  task1_2.py
task2/: README.md  decision_fsm.py  lane_change.json  path_2_1.json  projection.py
task3/: 3_cross.py  3_driver.py  3_sum.py  3_sum_f.py  control.py  decision.py  final_task3.py  hv.py  path3_1.json  path3_2.json  round.py  round_real_final.py  task3.py  task3_data.py  task3_final.py  task3_mlp.py  task3_mlp_v2.py  task3_real_final.py  task3_sh.py  task_3.py  task_3_legend.py  task____.py
(+78 files in other folders)
