<?xml version="1.0"?>
<package format="3">
  <name>pkg_task_3</name>
  <version>0.0.0</version>
  <description>KMC Task 3</description>

  <maintainer email="team@kmc.com">TEAM_H6</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
